--- a/Jupiter/Site.Master
+++ b/Jupiter/Site.Master
@@ -1,4 +1,4 @@
-﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site.master.cs" Inherits="SolarSystem.Jupiter.SiteMaster" %>
+﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site.master.cs" Inherits="EPSILab.SolarSystem.Jupiter.SiteMaster" %>
 
 <!DOCTYPE html>
 <html>
