--- a/Jupiter/Styles/Membres.css
+++ b/Jupiter/Styles/Membres.css
@@ -1,8 +1,8 @@
-﻿.ville {
+﻿.campus {
     margin-bottom: 20px;
 }
 
-.listBureau, .listMembres {
+.listBureau, .listMembers {
     display: inline-block;
     vertical-align: top;
 }
@@ -11,11 +11,11 @@
     border-bottom: 2px solid lightgrey;
 }
 
-.titleVille {
+.titleCampus {
     color: #0664a9;
 }
 
-.blocMembre {
+.blocMember {
     display: inline-block;
     vertical-align: top;
     margin-bottom: 5px;
@@ -23,28 +23,28 @@
     color: black;
 }
 
-    .blocMembre:hover {
+    .blocMember:hover {
         background: lightgrey;
         text-decoration: none;
     }
 
-.photoMembre {
+.photoMember {
     width: 75px;
     height: 75px;
 }
 
-.photoMembre, .descMembre {
+.photoMember, .descMember {
     vertical-align: top;
     display: inline-block;
     margin: 2px 0 0 2px;
 }
 
-.nomMembre {
+.nameMember {
     font-size: 14px;
     font-weight: bold;
 }
 
-.membre {
+.member {
     margin: 0;
     padding: 0;
 }
@@ -55,7 +55,7 @@
     margin-right: 10px;
 }
 
-#nom_prenom {
+#lastname_firstname {
     margin-left: 35px;
 }
 
@@ -64,7 +64,7 @@
     margin-right: 10px;
 }
 
-#reseauxSociaux {
+#socialNetworks {
     margin-bottom: 80px;
 }
 
@@ -81,12 +81,9 @@
     }
 
 
-
-
-
 /* Changement des éléments de l'écran si on dépasse les 1100px */
 @media screen and (min-width: 1100px) {
-    .blocMembre {
+    .blocMember {
         width: 328px;
     }
 
@@ -95,14 +92,14 @@
         margin-right: 5px;
     }
 
-    .listMembres {
+    .listMembers {
         width: 661px;
     }
 }
 
 /* Changement des éléments de l'écran si on est entre 600 et 1100px */
 @media screen and (min-width: 600px) and (max-width: 1100px) {
-    .blocMembre {
+    .blocMember {
         width: 248px;
     }
 
@@ -111,21 +108,21 @@
         margin-right: 5px;
     }
 
-    .listMembres {
+    .listMembers {
         width: 500px;
     }
 }
 
 /* Changement des éléments de l'écran si on est entre 400 et 600px */
 @media screen and (min-width: 400px) and (max-width: 600px) {
-    .blocMembre, .listBureau, .listMembres {
+    .blocMember, .listBureau, .listMembers {
         width: 100%;
     }
 }
 
 /* Changement des éléments de l'écran si on est en dessous de 400px */
 @media screen and (max-width: 400px) {
-    #nom_prenom {
+    #lastname_firstname {
         margin: 0;
     }
 
@@ -143,16 +140,16 @@
             margin: 0 75px;
         }
 
-    .blocMembre, .listBureau, .listMembres {
+    .blocMember, .listBureau, .listMembers {
         width: 100%;
     }
 
-    .photoMembre {
+    .photoMember {
         display: block;
         margin: auto;
     }
 
-    .blocMembre {
+    .blocMember {
         text-align: center;
     }
 
@@ -164,7 +161,7 @@
         margin: 5px;
     }
 
-    #reseauxSociaux {
+    #socialNetworks {
         min-width: 400px;
     }
 }
