--- a/Jupiter/Styles/Styles.css
+++ b/Jupiter/Styles/Styles.css
@@ -233,13 +233,13 @@ footer {
     }
 
     #AppliWin8 {
-        background: url(../Images/AppliWindowsStore.png) no-repeat center;
+        background: url(../Images/Apps/WS_Large.png) no-repeat center;
         width: 159px;
         height: 50px;
     }
 
     #AppliPhone8 {
-        background: url(../Images/AppliWindowsPhone.png) no-repeat center;
+        background: url(../Images/Apps/WP_Large.png) no-repeat center;
         width: 159px;
         height: 50px;
     }
@@ -263,13 +263,13 @@ footer {
     }
 
     #AppliWin8 {
-        background: url(../Images/AppliWindowsStore.png) no-repeat center;
+        background: url(../Images/Apps/WS_Large.png) no-repeat center;
         width: 159px;
         height: 50px;
     }
 
     #AppliPhone8 {
-        background: url(../Images/AppliWindowsPhone.png) no-repeat center;
+        background: url(../Images/Apps/WP_Large.png) no-repeat center;
         width: 159px;
         height: 50px;
     }
@@ -302,13 +302,13 @@ footer {
     }
 
     #AppliWin8 {
-        background: url(../Images/AppliWindowsStore.png) no-repeat center;
+        background: url(../Images/Apps/WS_Large.png) no-repeat center;
         width: 159px;
         height: 50px;
     }
 
     #AppliPhone8 {
-        background: url(../Images/AppliWindowsPhone.png) no-repeat center;
+        background: url(../Images/Apps/WP_Large.png) no-repeat center;
         width: 159px;
         height: 50px;
     }
@@ -349,13 +349,13 @@ footer {
     }
 
     #AppliWin8 {
-        background: url(../Images/VignetteWindowsStore.png) no-repeat center;
+        background: url(../Images/Apps/WS_Large.png) no-repeat center;
         width: 50px;
         height: 50px;
     }
 
     #AppliPhone8 {
-        background: url(../Images/VignetteWindowsPhone.png) no-repeat center;
+        background: url(../Images/Apps/WP_Small.png) no-repeat center;
         width: 50px;
         height: 50px;
     }
